Allow compilation and run with JDK11